<resources>
    <string name="app_name">FlexibleFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_ini_home_fragmenr">Hello Ini Home Fragmenr</string>
    <string name="hello_ini_home_fragment">Hello Ini Home Fragment</string>
    <string name="ke_fragment_category">Ke Fragment Category</string>
    <string name="ini_fragment_category">Ini Fragment Category</string>
    <string name="ke_fragment_lifestyle">Ke Fragment Lifestyle</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="kategori_ini_berisi_produk_produk_lifestyle">Kategori ini berisi produk-produk lifestyle</string>
    <string name="ke_halaman_profile_activity">KE halaman profile activity</string>
    <string name="tampilkan_sebuah_dialog">Tampilkan sebuah dialog</string>
    <string name="coach">Siapa pelatih tersukses Manchester United</string>
    <string name="saf">Sir Alex Ferguson</string>
    <string name="mou">Jose Mourinho</string>
    <string name="LVG">Louis Van Gaal</string>
    <string name="moyes">David Moyes</string>
    <string name="close">Close</string>
    <string name="pilih">Pilih</string>
    <string name="tutup">Tutup</string>
</resources>
