<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DialogFragment"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/coach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="20sp"/>
    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:text="@string/saf"
            android:id="@+id/saf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>
        <RadioButton
            android:text="@string/mou"
            android:id="@+id/mou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>
        <RadioButton
            android:text="@string/LVG"
            android:id="@+id/lvg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>
        <RadioButton
            android:text="@string/moyes"
            android:id="@+id/moyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:weightSum="1">
        <Button
            android:id="@+id/close"
            android:text="@string/tutup"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"/>
        <Button
            android:id="@+id/pilih"
            android:text="@string/pilih"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"/>

    </LinearLayout>

</LinearLayout>